// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lifecycles connectedCallback 1`] = `
"import LightningComponent from \\"lwc2react/lib/LightningComponent\\";
import ObservableMembrane from \\"observable-membrane\\";
import React from \\"react\\";
import _tmpl from \\"./test.html\\";

class Test extends LightningComponent {
  constructor(...args) {
    super(_tmpl);
    this.__s.a = 1;
  }

  render() {
    const prox = Object.assign({}, this, this.__s);
    prox.__proto__ = this.__proto__;
    return _tmpl(prox);
  }

  componentDidMount() {
    super.componentDidMount(_tmpl);
    this.__s.a++;
    this.__s.a++;
    this.__s.a++;
  }

  componentWillUnmount() {
    super.componentWillUnmount(_tmpl);
  }
}

export default Test;"
`;

exports[`Lifecycles disconnectedCallback 1`] = `
"import LightningComponent from \\"lwc2react/lib/LightningComponent\\";
import ObservableMembrane from \\"observable-membrane\\";
import React from \\"react\\";
import _tmpl from \\"./test.html\\";

class Test extends LightningComponent {
  constructor(...args) {
    super(_tmpl);
    this.__s.a = 1;
  }

  render() {
    const prox = Object.assign({}, this, this.__s);
    prox.__proto__ = this.__proto__;
    return _tmpl(prox);
  }

  componentDidMount() {
    super.componentDidMount(_tmpl);
  }

  componentWillUnmount() {
    super.componentWillUnmount(_tmpl);
    this.__s.a++;
    this.__s.a++;
    this.__s.a++;
  }
}

export default Test;"
`;

exports[`Lifecycles errorCallback 1`] = `
"import LightningComponent from \\"lwc2react/lib/LightningComponent\\";
import ObservableMembrane from \\"observable-membrane\\";
import React from \\"react\\";
import _tmpl from \\"./test.html\\";

class Test extends LightningComponent {
  constructor(...args) {
    super(_tmpl);
    this.__s.a = 1;
  }

  componentDidCatch(error, stack) {
    this.__s.a++;
    this.__s.a++;
    this.__s.a++;
  }

  render() {
    const prox = Object.assign({}, this, this.__s);
    prox.__proto__ = this.__proto__;
    return _tmpl(prox);
  }

  componentDidMount() {
    super.componentDidMount(_tmpl);
  }

  componentWillUnmount() {
    super.componentWillUnmount(_tmpl);
  }
}

export default Test;"
`;

exports[`Lifecycles renderedCallback 1`] = `
"import LightningComponent from \\"lwc2react/lib/LightningComponent\\";
import ObservableMembrane from \\"observable-membrane\\";
import React from \\"react\\";
import _tmpl from \\"./test.html\\";

class Test extends LightningComponent {
  constructor(...args) {
    super(_tmpl);
    this.__s.a = 1;
  }

  componentDidUpdate() {
    this.__s.a++;
    this.__s.a++;
    this.__s.a++;
  }

  render() {
    const prox = Object.assign({}, this, this.__s);
    prox.__proto__ = this.__proto__;
    return _tmpl(prox);
  }

  componentDidMount() {
    super.componentDidMount(_tmpl);
  }

  componentWillUnmount() {
    super.componentWillUnmount(_tmpl);
  }
}

export default Test;"
`;
